[completed:116] nicknames will now not extend over list borders

--- a/prod/index.html
+++ b/prod/index.html
@@ -10,7 +10,7 @@
 <script type="text/javascript" charset="utf-8" src="lib/karazy/karazy-constants.js"></script>
 <script type="text/javascript" charset="utf-8" src="lib/karazy/karazy-i18n.js"></script>
 <script type="text/javascript" charset="utf-8" src="lib/karazy/karazy-util.js"></script>
-<script type="text/javascript" charset="utf-8" src="lib/karazy/sencha-touch.js"></script>
+<script type="text/javascript" charset="utf-8" src="lib/touch/sencha-touch.js"></script>
 <script type="text/javascript" charset="utf-8" src="lib/karazy/karazy-channel.js"></script>
 <script type="text/javascript" charset="utf-8" src="/_ah/channel/jsapi"></script>
 <script type="text/javascript" charset="utf-8" src="app-all.js"></script>
