--- a/prod/index.html
+++ b/prod/index.html
@@ -6,11 +6,11 @@
 <!-- <link rel="stylesheet" href="sdk/resources/css/sencha-touch.css" type="text/css">
 <link rel="stylesheet" href="res/css/app.css" type="text/css"> -->
 <!-- <script type="text/javascript" charset="utf-8" src="lib/touch/sencha-touch-debug.js"></script> -->
-<script type="text/javascript" charset="utf-8" src="lib/karazy/karazy-translations.js"></script>
+<!-- <script type="text/javascript" charset="utf-8" src="lib/karazy/karazy-translations.js"></script> -->
 <script type="text/javascript" charset="utf-8" src="lib/karazy/karazy-config.js"></script>
-<script type="text/javascript" charset="utf-8" src="lib/karazy/karazy-constants.js"></script>
+<!-- <script type="text/javascript" charset="utf-8" src="lib/karazy/karazy-constants.js"></script> -->
 <script type="text/javascript" charset="utf-8" src="lib/karazy/karazy-util.js"></script>
-<script type="text/javascript" charset="utf-8" src="lib/karazy/karazy-i18n.js"></script>
+<!-- <script type="text/javascript" charset="utf-8" src="lib/karazy/karazy-i18n.js"></script> -->
 <script type="text/javascript" charset="utf-8" src="lib/karazy/karazy-channel.js"></script>
 <script type="text/javascript" charset="utf-8" src="/_ah/channel/jsapi"></script>
 <!-- <script type="text/javascript" charset="utf-8" src="app.js"></script> -->
