--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,11 @@
 <link rel="stylesheet" href="res/css/app.css" type="text/css"> -->
 <!-- <script type="text/javascript" charset="utf-8" src="lib/touch/sencha-touch-debug.js"></script> -->
 <!-- <script type="text/javascript" charset="utf-8" src="lib/karazy/karazy-translations.js"></script> -->
-<script type="text/javascript" charset="utf-8" src="lib/karazy/karazy-config.js"></script>
+<!-- <script type="text/javascript" charset="utf-8" src="lib/karazy/karazy-config.js"></script> -->
 <!-- <script type="text/javascript" charset="utf-8" src="lib/karazy/karazy-constants.js"></script> -->
-<script type="text/javascript" charset="utf-8" src="lib/karazy/karazy-util.js"></script>
+<!-- <script type="text/javascript" charset="utf-8" src="lib/karazy/karazy-util.js"></script> -->
 <!-- <script type="text/javascript" charset="utf-8" src="lib/karazy/karazy-i18n.js"></script> -->
-<script type="text/javascript" charset="utf-8" src="lib/karazy/karazy-channel.js"></script>
+<!-- <script type="text/javascript" charset="utf-8" src="lib/karazy/karazy-channel.js"></script> -->
 <script type="text/javascript" charset="utf-8" src="/_ah/channel/jsapi"></script>
 <!-- <script type="text/javascript" charset="utf-8" src="app.js"></script> -->
 <!-- The line below must be kept intact for Sencha Command to build your application -->
