--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,10 @@
         * It is recommended to keep this as minimal as possible to provide instant feedback
         * while other resources are still being loaded for the first time
         */
-       html, body {
+   /*    html, body {
            height: 100%;
            background-color: #1985D0
-       }
+       }*/
 
        #appLoadingIndicator {
            position: absolute;
@@ -22,13 +22,13 @@
            width: 100%;
            height: 30px;
            -webkit-animation-name: appLoadingIndicator;
-           -webkit-animation-duration: 0.5s;
+           -webkit-animation-duration: 0.7s;
            -webkit-animation-iteration-count: infinite;
            -webkit-animation-direction: linear;
        }
 
        #appLoadingIndicator > * {
-           background-color: #FFFFFF;
+           background-color: #000000;
            display: inline-block;
            height: 30px;
            -webkit-border-radius: 15px;
