--- a/src/index.html
+++ b/src/index.html
@@ -20,32 +20,10 @@
           top: 15px;
           width: 100%;
           text-align: center;
-       }
-        /**
-        * Example of an initial loading indicator.
-        * It is recommended to keep this as minimal as possible to provide instant feedback
-        * while other resources are still being loaded for the first time
-        */
-
-       #appLoadingIndicator {
-           position: relative;           
-           text-align: center;
-           width: 100%;
-           height: 30px;
            -webkit-animation-name: appLoadingIndicator;
-           -webkit-animation-duration: 0.7s;
+           -webkit-animation-duration: 1.5s;
            -webkit-animation-iteration-count: infinite;
            -webkit-animation-direction: linear;
-       }
-
-       #appLoadingIndicator > * {
-           background-color: #ff9933;
-           display: inline-block;
-           height: 30px;
-           -webkit-border-radius: 15px;
-           margin: 0 5px;
-           width: 30px;
-           opacity: 0.8;
        }
 
        @-webkit-keyframes appLoadingIndicator{
@@ -67,12 +45,7 @@
 </head>
 <body>
   <div id="appLoadingWrapper">
-    <div id="appLoadingIndicator">
-        <div></div>
-        <div></div>
-        <div></div>
-    </div>
-    <div id="cloobsterLoadingText">Loading Cloobster Cockpit ...</div>
+    <div id="cloobsterLoadingText">loading cloobster cockpit ...</div>
   </div>
 </body>
 </html>
