show account email in checkin details if present

--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
 </head>
 <body>
   <div id="appLoadingWrapper">
-    <div id="cloobsterLoadingText">loading cloobster cockpit ...</div>
+    <div id="cloobsterLoadingText">loading ...</div>
   </div>
 </body>
 </html>
